More spacing and fixes

--- a/css/style.css
+++ b/css/style.css
@@ -464,13 +464,13 @@ iframe.video { border:0; }
   font-size: 1em;
 }
 #menu-primary ul {
-  margin: 0;
+  margin: 0 0 10px;
 }
 #menu-primary li {
   display: inline-block;
 }
 #menu-primary li a {
-  line-height: 1em;
+  line-height: 1.2em;
   font-size: 1em;
   margin-right: 20px;
   text-transform: uppercase;
@@ -504,10 +504,7 @@ body.learning         div.menu li.learning        a {
 }
 #branding {
   max-width: 225px;
-  margin-bottom: 20px;
-}
-#branding img {
-  width: 100%;
+  margin-bottom: 25px;
 }
 
 .sidebar .widget.news {
